--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "aws-cdk": "2.43.0",
     "@types/jest": "^27.5.2",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
+    "aws-cdk": "2.44.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.43.0",
+    "@aws-cdk/aws-apprunner-alpha": "^2.44.0-alpha.0",
+    "aws-cdk-lib": "2.44.0",
     "constructs": "^10.0.0"
   }
 }
